<package format="2">
  <name>niryo_end_effector_publisher_gui</name>
  <version>1.15.1</version>
  <description>
    A GUI tool for setting and publishing end effector button state of the Ned2.
  </description>
  <author email="v.pitre@niryo.com">Valentin Pitre</author>
  <maintainer email="v.pitre@niryo.com">Valentin Pitre</maintainer>

  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>end_effector_interface</exec_depend>
</package>
