<package>
    <name>niryo_robot_arm_commander</name>
    <version>3.2.0</version>
    <description>
        Interface between user and Moveit! to easily control Ned (arm + tools). Validates params, checks if
        previous trajectory has not finished, ...
    </description>
    <author email="r.lux@niryo.com">Rémi Lux</author>
    <maintainer email="r.lux@niryo.com">Rémi Lux</maintainer>
    <maintainer email="v.pitre@niryo.com">Valentin Pitre</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>niryo_robot_msgs</build_depend>

    <run_depend>actionlib</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>control_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>moveit</run_depend>
    <run_depend>moveit_msgs</run_depend>
    <run_depend>ros_controllers</run_depend>
    <run_depend>rosbridge_server</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf2_web_republisher</run_depend>
    <run_depend>trajectory_msgs</run_depend>

    <!-- Niryo Dependencies -->
    <run_depend>niryo_robot_hardware_interface</run_depend>
    <run_depend>niryo_robot_msgs</run_depend>
    <run_depend>niryo_ned_moveit_config_standalone</run_depend>
    <run_depend>niryo_ned_moveit_config_w_gripper1</run_depend>

    <!-- Python Dependencies -->
    <run_depend>python-numpy</run_depend>

</package>
