<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>niryo_robot_bringup</name>
  <version>3.0.0</version>
  <description>Provides roslaunch scripts to start Ned packages and initialize ROS params</description>
  <maintainer email="r.lux@niryo.com">Rémi Lux</maintainer>
  <maintainer email="c.ducatez@niryo.com">Corentin Ducatez</maintainer>
  <license>GPLv3</license>
  <author email="r.lux@niryo.com">Rémi Lux</author>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>
