<package>
  <name>niryo_robot_bringup</name>
  <version>3.2.0</version>
  <description>Provides roslaunch scripts to start Ned packages and initialize ROS params</description>
  <author email="r.lux@niryo.com">Rémi Lux</author>
  <maintainer email="r.lux@niryo.com">Rémi Lux</maintainer>
  <maintainer email="v.pitre@niryo.com">Valentin Pitre</maintainer>
  <maintainer email="c.ducatez@niryo.com">Corentin Ducatez</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xacro</run_depend>
  <run_depend>rviz</run_depend>

  <!-- Niryo Dependencies -->
  <run_depend>niryo_robot_description</run_depend>
  <run_depend>niryo_robot_gazebo</run_depend>
  <run_depend>niryo_robot_vision</run_depend>
  <run_depend>niryo_robot_arm_commander</run_depend>
  <run_depend>niryo_ned_moveit_config_standalone</run_depend>

</package>
