<package>
    <name>niryo_robot_credentials</name>
    <version>3.1.0</version>
    <description>The niryo_robot_credentials package</description>

    <author email="j.mottier@niryo.com">Justin Mottier</author>
    <maintainer email="j.mottier@niryo.com">Justin Mottier</maintainer>
    <maintainer email="c.ducatez@niryo.com">Corentin Ducatez</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>rospy</run_depend>

</package>
