<package>
  <name>niryo_robot_description</name>
  <version>3.1.0</version>
  <description>Provides URDF files</description>
  <author email="r.lux@niryo.com">Rémi Lux</author>
  <maintainer email="r.lux@niryo.com">Rémi Lux</maintainer>
  <maintainer email="v.pitre@niryo.com">Valentin Pitre</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
