<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>niryo_robot_description</name>
  <version>5.0.0</version>
  <description>Provides URDF files</description>
  <maintainer email="r.lux@niryo.com">Rémi Lux</maintainer>
  <maintainer email="v.pitre@niryo.com">Valentin Pitre</maintainer>

  <license>GPLv3</license>
  <author email="r.lux@niryo.com">Rémi Lux</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>


  <test_depend>python3-catkin-lint</test_depend>
</package>
