<package>
    <name>niryo_robot_gazebo</name>
    <version>3.2.0</version>
    <description>Gazebo simulation for Ned</description>
    <author email="r.lux@niryo.com">Rémi Lux</author>
    <maintainer email="r.lux@niryo.com">Rémi Lux</maintainer>
    <maintainer email="v.pitre@niryo.com">Valentin Pitre</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>gazebo_ros</build_depend>

    <run_depend>controller_manager</run_depend>
    <run_depend>joint_state_controller</run_depend>
    <run_depend>robot_state_publisher</run_depend>
    <run_depend>effort_controllers</run_depend>
    <run_depend>niryo_robot_description</run_depend>
    <run_depend>niryo_robot_arm_commander</run_depend>
    <run_depend>niryo_robot_hardware_interface</run_depend>
    <run_depend>gazebo_ros_control</run_depend>
    <run_depend>gazebo_ros</run_depend>

    <export>
        <gazebo_ros gazebo_model_path="${prefix}/models"/>
        <gazebo_ros gazebo_media_path="${prefix}"/>
    </export>
</package>
