<?xml version="1.0"?>
<package format="2">
  <name>niryo_robot_led_ring</name>
  <version>0.0.0</version>
  <description>The niryo_robot_led_ring package</description>


  <maintainer email="podet@todo.todo">podet</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>niryo_robot_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>niryo_robot_msgs</exec_depend>



  <export>


  </export>
</package>
