<package>
    <name>niryo_robot_metrics</name>
    <version>3.1.0</version>
    <description>The niryo_robot_metrics package</description>

    <author email="j.mottier@niryo.com">Justin Mottier</author>
    <maintainer email="j.mottier@niryo.com">Justin Mottier</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>rospy</run_depend>

</package>
